util\dump_syms.exe util\dump_syms.txt: Add a prebuilt copy of the Google Airbag dump_syms.exe utility,   since it's not buildable with standard or express edition Visual Studio. util\zip.exe: Add a copy of Info-ZIP's zip to avoid another setup-time dependency loudmouth,HippoUtil,HippoUI.vcproj: Convert from .pdb files to Airbag-format .sym text files as   a post-build step WiXInstaller/Makefile: Build a Mugshot-symbols.zip file to be uploaded to the server along with the .msi

--- a/dumbhippo/trunk/client/windows/HippoUI/HippoUI.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoUI/HippoUI.vcproj
@@ -103,6 +103,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="..\util\dump_syms $(OutDir)\HippoUI.pdb &gt; $(OutDir)\HippoUI.sym"
 			/>
 		</Configuration>
 		<Configuration
@@ -180,6 +181,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="..\util\dump_syms $(OutDir)\HippoUI.pdb &gt; $(OutDir)\HippoUI.sym"
 			/>
 		</Configuration>
 	</Configurations>
