* Build GLib DLL's from source * HippoDll.vsprops: Start of a common property sheet holding settings we need in all   our DLL's (so, that's how you make managing 20 projects semi-sane...) * giowin32.c: Local hack to deal with an incompatibility between the way that   GLib tests for socket vs. fd in g_io_channel_unix_new() (ugh!) and the VS8 runtime.

--- a/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;../HippoUtil;../../common/cairo/src;../dependencies/glib/include/glib-2.0;../dependencies/pango/include/pango-1.0;../dependencies/glib/lib/glib-2.0/include;../dependencies/jpeg/include;../../common;../../common/loudmouth;../../common/canvas;../../common/hippo/generated"
+				AdditionalIncludeDirectories=".;../HippoUtil;../cairo;../../common/cairo/src;../../common/glib;../../common/glib/glib;../libglib;../dependencies/gettext/include;&quot;../dependencies/pango/include/pango-1.0&quot;;../dependencies/jpeg/include;../../common;../../common/loudmouth;../../common/canvas;../../common/hippo/generated"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;HIPPOCOMMON_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
