--- a/dumbhippo/trunk/client/windows/libgmodule/libgmodule.vcproj
+++ b/dumbhippo/trunk/client/windows/libgmodule/libgmodule.vcproj
@@ -2,8 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="TestLoudmouth"
-	ProjectGUID="{7C7F5015-5C40-4D37-81DD-DA8260FBB242}"
+	Name="libgmodule"
+	ProjectGUID="{A657624C-DFB1-4082-8B94-3EAE90D969A5}"
+	RootNamespace="gmodule"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -16,11 +17,11 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="../Debug"
-			IntermediateDirectory="Debug"
-			ConfigurationType="1"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
-			CharacterSet="2"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="2"
+			InheritedPropertySheets="..\HippoDll.vsprops"
+			CharacterSet="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -40,11 +41,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../common/loudmouth;../../common/glib;../glib;../dependencies/gettext/include"
-				PreprocessorDefinitions="__WIN32__;WIN32;_DEBUG;_CONSOLE"
+				AdditionalIncludeDirectories=".;..\libglib;..\..\common\glib;..\..\common\glib\glib;..\dependencies\gettext\include;..\dependencies\libiconv\include"
+				PreprocessorDefinitions="HAVE_CONFIG_H;WIN32;_DEBUG;_WINDOWS;_USRDLL;LIBGLIB_EXPORTS;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;GMODULE_COMPILATION"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
+				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -61,14 +62,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions="/VERBOSE:LIB"
-				AdditionalDependencies="glib-2.0.lib intl.lib ws2_32.lib"
-				OutputFile="$(OutDir)/test-lm.exe"
+				OutputFile="$(OutDir)\libgmodule-2.0-0.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="../dependencies/glib/lib;../dependencies/gettext/lib"
+				ModuleDefinitionFile="..\..\common\glib\gmodule\gmodule.def"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/TestLoudmouth.pdb"
-				SubSystem="1"
+				SubSystem="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -98,11 +96,12 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
-			ConfigurationType="1"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
-			CharacterSet="2"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="2"
+			InheritedPropertySheets="..\HippoDll.vsprops"
+			CharacterSet="1"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -121,9 +120,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
-				RuntimeLibrary="0"
-				UsePrecompiledHeader="2"
+				AdditionalIncludeDirectories=".;..\libglib;..\..\common\glib;..\..\common\glib\glib;..\dependencies\gettext\include;..\dependencies\libiconv\include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;GMODULE_EXPORTS"
+				RuntimeLibrary="2"
+				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
@@ -139,10 +139,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/TestLoudmouth.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
-				SubSystem="1"
+				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="1"
@@ -178,28 +177,56 @@
 	<Files>
 		<Filter
 			Name="Source Files"
-			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
+			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\common\loudmouth\examples\test-lm.c"
+				RelativePath="..\..\common\glib\gmodule\gmodule.c"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Header Files"
+			Filter="h;hpp;hxx;hm;inl;inc;xsd"
+			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
+			>
+			<File
+				RelativePath="..\..\common\glib\gmodule\gmodule.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\glib\gmodule\gmoduleconf.h.win32"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
 					>
 					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)/$(InputName)1.obj"
+						Name="VCCustomBuildTool"
+						Description="Creating gmoduleconf.h"
+						CommandLine="copy &quot;$(InputPath)&quot; gmoduleconf.h"
+						Outputs="gmoduleconf.h"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release|Win32"
 					>
 					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)/$(InputName)1.obj"
+						Name="VCCustomBuildTool"
+						Description="Creating gmoduleconf.h"
+						CommandLine="copy &quot;$(InputPath)&quot; gmoduleconf.h"
+						Outputs="gmoduleconf.h"
 					/>
 				</FileConfiguration>
+			</File>
+		</Filter>
+		<Filter
+			Name="Resource Files"
+			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
+			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
+			>
+			<File
+				RelativePath="..\..\common\glib\gmodule\gmodule.rc"
+				>
 			</File>
 		</Filter>
 	</Files>
