--- a/dumbhippo/trunk/client/windows/libgobject/libgobject.vcproj
+++ b/dumbhippo/trunk/client/windows/libgobject/libgobject.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="loudmouth"
-	ProjectGUID="{E02F6EA7-65C3-4D2A-919F-D022D6C26DFA}"
-	RootNamespace="loudmouth"
+	Name="libgobject"
+	ProjectGUID="{C9CE2D45-64DB-405A-B0C7-E8140ED657B1}"
+	RootNamespace="libgobject"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -17,15 +17,14 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="../Debug"
-			IntermediateDirectory="Debug"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
-			CharacterSet="2"
+			InheritedPropertySheets="..\HippoDll.vsprops"
+			CharacterSet="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="copy ..\..\common\loudmouth\win32-config.h ..\..\common\loudmouth\config.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -42,11 +41,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;../dependencies/gettext/include;../../common/glib;../../common/glib/glib;../libglib;../../common/loudmouth"
-				PreprocessorDefinitions="__WIN32__;LM_COMPILATION;HAVE_CONFIG_H;WIN32;_DEBUG;_WINDOWS;_USRDLL;LOUDMOUTH_EXPORTS"
+				AdditionalIncludeDirectories="..\libglib\debug;..\libglib;..\..\common\glib;..\..\common\glib\glib;..\dependencies\gettext\include"
+				PreprocessorDefinitions="HAVE_CONFIG_H;WIN32;_DEBUG;_WINDOWS;_USRDLL;LIBGLIB_EXPORTS;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;GOBJECT_COMPILATION"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
+				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -63,16 +62,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions="/VERBOSE:LIB"
-				AdditionalDependencies="intl.lib glib-2.0.lib ws2_32.lib"
-				OutputFile="$(OutDir)/loudmouth-1.dll"
+				OutputFile="$(OutDir)\libgobject-2.0-0.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="../dependencies/gettext/lib;../dependencies/glib/lib"
-				ModuleDefinitionFile="../../common/loudmouth/loudmouth/loudmouth.def"
+				ModuleDefinitionFile="gobject.def"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/loudmouth.pdb"
 				SubSystem="2"
-				ImportLibrary="$(OutDir)/loudmouth.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -98,17 +92,16 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Creating symbol dump file"
-				CommandLine="..\util\dump_syms $(OutDir)\$(ProjectName).pdb &gt; $(OutDir)\$(ProjectName).sym"
 			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
-			CharacterSet="2"
+			InheritedPropertySheets="..\HippoDll.vsprops"
+			CharacterSet="1"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -127,9 +120,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;LOUDMOUTH_EXPORTS"
-				RuntimeLibrary="0"
-				UsePrecompiledHeader="2"
+				AdditionalIncludeDirectories="..\libglib;..\..\common\glib;..\..\common\glib\glib;..\dependencies\gettext\include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;LIBGOBJECT_EXPORTS"
+				RuntimeLibrary="2"
+				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
@@ -145,14 +139,13 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/loudmouth.dll"
+				OutputFile="$(OutDir)\libgobject-2.0-0.dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile="loudmouth.def"
+				ModuleDefinitionFile="gobject.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				ImportLibrary="$(OutDir)/loudmouth.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -178,8 +171,6 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Creating symbol dump file"
-				CommandLine="..\util\dump_syms $(OutDir)\$(ProjectName).pdb &gt; $(OutDir)\$(ProjectName).sym"
 			/>
 		</Configuration>
 	</Configurations>
@@ -188,55 +179,79 @@
 	<Files>
 		<Filter
 			Name="Source Files"
-			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
+			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-connection.c"
+				RelativePath="..\..\common\glib\gobject\gboxed.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-debug.c"
+				RelativePath="..\..\common\glib\gobject\gclosure.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-error.c"
+				RelativePath="..\..\common\glib\gobject\genums.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-message-handler.c"
+				RelativePath="..\..\common\glib\gobject\gobject-query.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-message-node.c"
+				RelativePath="..\..\common\glib\gobject\gobject.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-message.c"
+				RelativePath="..\..\common\glib\gobject\gobjectaliasdef.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-parser.c"
+				RelativePath="..\..\common\glib\gobject\gobjectnotifyqueue.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-proxy.c"
+				RelativePath="..\..\common\glib\gobject\gparam.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-sha.c"
+				RelativePath="..\..\common\glib\gobject\gparamspecs.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-ssl.c"
+				RelativePath="..\..\common\glib\gobject\gsignal.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-utils.c"
+				RelativePath="..\..\common\glib\gobject\gsourceclosure.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\loudmouth.def"
+				RelativePath="..\..\common\glib\gobject\gtype.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\glib\gobject\gtypemodule.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\glib\gobject\gtypeplugin.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\glib\gobject\gvalue.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\glib\gobject\gvaluearray.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\glib\gobject\gvaluetransform.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\glib\gobject\gvaluetypes.c"
 				>
 			</File>
 		</Filter>
@@ -246,63 +261,83 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-connection.h"
+				RelativePath="..\..\common\glib\gobject\gboxed.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-debug.h"
+				RelativePath="..\..\common\glib\gobject\gclosure.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-error.h"
+				RelativePath="..\..\common\glib\gobject\genums.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-internals.h"
+				RelativePath="..\..\common\glib\gobject\gmarshal.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-message-handler.h"
+				RelativePath="..\..\common\glib\gobject\gobject.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-message-node.h"
+				RelativePath="..\..\common\glib\gobject\gobjectalias.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-message.h"
+				RelativePath="..\..\common\glib\gobject\gparam.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-parser.h"
+				RelativePath="..\..\common\glib\gobject\gparamspecs.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-proxy.h"
+				RelativePath="..\..\common\glib\gobject\gsignal.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-sha.h"
+				RelativePath="..\..\common\glib\gobject\gsourceclosure.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-ssl.h"
+				RelativePath="..\..\common\glib\gobject\gtype.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\lm-utils.h"
+				RelativePath="..\..\common\glib\gobject\gtypemodule.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\common\loudmouth\loudmouth\loudmouth.h"
+				RelativePath="..\..\common\glib\gobject\gtypeplugin.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\glib\gobject\gvalue.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\glib\gobject\gvaluearray.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\glib\gobject\gvaluecollector.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\glib\gobject\gvaluetypes.h"
 				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
-			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
+			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath="..\..\common\glib\gobject\gobject.rc"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
