--- a/dumbhippo/trunk/client/windows/libpangowin32/libpangowin32.vcproj
+++ b/dumbhippo/trunk/client/windows/libpangowin32/libpangowin32.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="TestLoudmouth"
-	ProjectGUID="{7C7F5015-5C40-4D37-81DD-DA8260FBB242}"
-	RootNamespace="TestLoudmouth"
+	Name="libpangowin32"
+	ProjectGUID="{B71C2155-5DA6-465B-A4F5-C1CB451D5200}"
+	RootNamespace="libpangowin32"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -17,11 +17,11 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="../Debug"
-			IntermediateDirectory="Debug"
-			ConfigurationType="1"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
-			CharacterSet="2"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="2"
+			InheritedPropertySheets="..\HippoDll.vsprops"
+			CharacterSet="0"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -41,8 +41,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../common/loudmouth;../../common/glib/glib;../../common/glib;../libglib;../dependencies/gettext/include"
-				PreprocessorDefinitions="__WIN32__;WIN32;_DEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="../libpango;../dependencies/gettext/include;../../common/glib;../../common/glib/glib;../libglib;../../common/glib/gmodule;../../common/pango/pango;../../common/pango"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;LIBPANGOWIN32_EXPORTS;PANGO_ENABLE_BACKEND;PANGO_ENABLE_ENGINE;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -50,6 +50,7 @@
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
+				DisableSpecificWarnings="4244"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -62,14 +63,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions="/VERBOSE:LIB"
-				AdditionalDependencies="glib-2.0.lib intl.lib ws2_32.lib"
-				OutputFile="$(OutDir)/test-lm.exe"
+				OutputFile="$(OutDir)\libpangowin32-1.0-0.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="../dependencies/glib/lib;../dependencies/gettext/lib"
+				ModuleDefinitionFile="../../common/pango/pango/pangowin32.def"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/TestLoudmouth.pdb"
-				SubSystem="1"
+				SubSystem="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -99,11 +97,12 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
-			ConfigurationType="1"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
-			CharacterSet="2"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="2"
+			InheritedPropertySheets="..\HippoDll.vsprops"
+			CharacterSet="0"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -122,12 +121,14 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
-				RuntimeLibrary="0"
-				UsePrecompiledHeader="2"
+				AdditionalIncludeDirectories="../libpango;../dependencies/gettext/include;../../common/glib;../../common/glib/glib;../libglib;../../common/glib/gmodule;../../common/pango/pango;../../common/pango"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;LIBPANGOWIN32_EXPORTS"
+				RuntimeLibrary="2"
+				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
+				DisableSpecificWarnings="4244"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -140,10 +141,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/TestLoudmouth.exe"
 				LinkIncremental="1"
+				ModuleDefinitionFile="../../common/pango/pango/pangowin32.def"
 				GenerateDebugInformation="true"
-				SubSystem="1"
+				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="1"
@@ -179,28 +180,60 @@
 	<Files>
 		<Filter
 			Name="Source Files"
-			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
+			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\common\loudmouth\examples\test-lm.c"
+				RelativePath="..\..\common\pango\modules\basic\basic-win32.c"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)/$(InputName)1.obj"
+						PreprocessorDefinitions="PANGO_MODULE_PREFIX=_pango_basic_win32"
 					/>
 				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)/$(InputName)1.obj"
-					/>
-				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\module-defs-win32.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\pango\pango\pangowin32-fontcache.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\pango\pango\pangowin32-fontmap.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\pango\pango\pangowin32.c"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Header Files"
+			Filter="h;hpp;hxx;hm;inl;inc;xsd"
+			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
+			>
+			<File
+				RelativePath="..\..\common\pango\pango\pangowin32-private.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\pango\pango\pangowin32.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Resource Files"
+			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
+			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
+			>
+			<File
+				RelativePath="..\..\common\pango\pango\pangowin32.rc"
+				>
 			</File>
 		</Filter>
 	</Files>
