--- a/dumbhippo/trunk/client/windows/HippoExplorer/HippoExplorer.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoExplorer/HippoExplorer.vcproj
@@ -4,6 +4,7 @@
 	Version="8.00"
 	Name="HippoExplorer"
 	ProjectGUID="{5EE19538-0578-4199-93DD-E77F11A060E4}"
+	RootNamespace="HippoExplorer"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -16,10 +17,10 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="../Debug"
-			IntermediateDirectory="Debug"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			InheritedPropertySheets="..\HippoDebugDll.vsprops;.\HippoExplorer.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
@@ -36,23 +37,11 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
-				AdditionalIncludeDirectories="../HippoUtil"
+				AdditionalIncludeDirectories=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="0"
-				AdditionalIncludeDirectories="../HippoUtil;../../common/hippoipc;../HippoIpc"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;NOMINMAX"
-				MinimalRebuild="true"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
-				TreatWChar_tAsBuiltInType="true"
-				ForceConformanceInForLoopScope="true"
-				UsePrecompiledHeader="2"
-				PrecompiledHeaderThrough="stdafx-hippoexplorer.h"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="4"
+				AdditionalIncludeDirectories=""
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -65,15 +54,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				RegisterOutput="true"
-				AdditionalDependencies="wininet.lib advapi32.lib gdi32.lib"
-				OutputFile="$(OutDir)/HippoExplorer.dll"
-				LinkIncremental="2"
-				ModuleDefinitionFile="HippoExplorer.def"
-				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/HippoExplorer.pdb"
-				SubSystem="2"
-				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -102,10 +82,10 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
-			ConfigurationType="1"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="2"
+			InheritedPropertySheets="..\HippoReleaseDll.vsprops;.\HippoExplorer.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
@@ -125,13 +105,6 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
-				RuntimeLibrary="0"
-				UsePrecompiledHeader="2"
-				PrecompiledHeaderThrough="stdafx-hippoexplorer.h"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -144,13 +117,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/HippoExplorer.exe"
-				LinkIncremental="1"
-				GenerateDebugInformation="true"
-				SubSystem="2"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -181,6 +147,7 @@
 	<References>
 		<ProjectReference
 			ReferencedProjectIdentifier="{638E7547-B5E8-49AD-A70B-56E333C216FE}"
+			RelativePathToProject=".\HippoUtil\HippoUtil.vcproj"
 		/>
 	</References>
 	<Files>
