--- a/dumbhippo/trunk/client/windows/HippoFirefox/HippoFirefox.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoFirefox/HippoFirefox.vcproj
@@ -17,10 +17,10 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="../Debug"
-			IntermediateDirectory="Debug"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			InheritedPropertySheets="..\HippoDebugDll.vsprops;.\HippoFirefox.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
@@ -40,18 +40,6 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="0"
-				AdditionalIncludeDirectories="&quot;c:\Program Files\gecko-sdk\include&quot;;&quot;../../common/firefox/gecko-private/include&quot;;../../common/hippoipc;../HippoUtil;../HippoIpc;Debug"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;HIPPOFIREFOX_EXPORTS;HIPPO_OS_WINDOWS"
-				MinimalRebuild="true"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
-				TreatWChar_tAsBuiltInType="true"
-				UsePrecompiledHeader="0"
-				PrecompiledHeaderThrough="stdafx-hippofirefox.h"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="4"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -64,15 +52,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="&quot;c:\Program Files\gecko-sdk\lib\xpcomglue_s.lib&quot; &quot;c:\Program Files\gecko-sdk\lib\xpcom.lib&quot; &quot;c:\Program Files\gecko-sdk\lib\nspr4.lib&quot;"
-				OutputFile="$(OutDir)/HippoFirefox.dll"
-				LinkIncremental="2"
-				IgnoreDefaultLibraryNames="MSVCRT;LIBCD"
-				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/HippoFirefox.pdb"
-				SubSystem="2"
-				ImportLibrary="$(OutDir)/HippoFirefox.lib"
-				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -101,10 +80,10 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			InheritedPropertySheets="..\HippoReleaseDll.vsprops;.\HippoFirefox.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
@@ -124,13 +103,6 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;HIPPOFIREFOX_EXPORTS"
-				RuntimeLibrary="0"
-				UsePrecompiledHeader="0"
-				PrecompiledHeaderThrough="stdafx-hippofirefox.h"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -143,14 +115,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/HippoFirefox.dll"
-				LinkIncremental="1"
-				GenerateDebugInformation="true"
-				SubSystem="2"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				ImportLibrary="$(OutDir)/HippoFirefox.lib"
-				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -210,6 +174,15 @@
 						Outputs="$(IntDir)\$(InputName).h;$(OutDir)\$(InputName).xpt"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="run-xpidl.bat &quot;$(InputPath)&quot; &quot;$(IntDir)\$(InputName).h&quot;  &quot;$(OutDir)\$(InputName).xpt&quot;"
+						Outputs="$(IntDir)\$(InputName).h;$(OutDir)\$(InputName).xpt"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\..\common\firefox\public\hippoIControlListener.idl"
@@ -223,6 +196,15 @@
 						Outputs="$(IntDir)\$(InputName).h;$(OutDir)\$(InputName).xpt"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="run-xpidl.bat &quot;$(InputPath)&quot; &quot;$(IntDir)\$(InputName).h&quot;  &quot;$(OutDir)\$(InputName).xpt&quot;"
+						Outputs="$(IntDir)\$(InputName).h;$(OutDir)\$(InputName).xpt"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\..\common\firefox\public\hippoIExtension.idl"
@@ -233,6 +215,15 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						CommandLine="run-xpidl.bat &quot;$(InputPath)&quot; &quot;$(IntDir)\$(InputName).h&quot;  &quot;$(OutDir)\$(InputName).xpt&quot;&#x0D;&#x0A;"
+						Outputs="$(IntDir)\$(InputName).h;$(OutDir)\$(InputName).xpt"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="run-xpidl.bat &quot;$(InputPath)&quot; &quot;$(IntDir)\$(InputName).h&quot;  &quot;$(OutDir)\$(InputName).xpt&quot;"
 						Outputs="$(IntDir)\$(InputName).h;$(OutDir)\$(InputName).xpt"
 					/>
 				</FileConfiguration>
