--- a/dumbhippo/trunk/client/windows/HippoShellExt/HippoShellExt.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoShellExt/HippoShellExt.vcproj
@@ -16,10 +16,10 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="../Debug"
-			IntermediateDirectory="Debug"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			InheritedPropertySheets=".\HippoShellExt.vsprops;..\HippoDebugDll.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
@@ -39,19 +39,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="0"
-				AdditionalIncludeDirectories="../HippoUtil"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;HIPPOSHELLEXT_EXPORTS;NOMINMAX"
-				MinimalRebuild="true"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
-				TreatWChar_tAsBuiltInType="true"
-				ForceConformanceInForLoopScope="true"
-				UsePrecompiledHeader="2"
-				PrecompiledHeaderThrough="stdafx-hipposhellext.h"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="4"
+				AdditionalIncludeDirectories=""
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -64,16 +52,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				RegisterOutput="true"
-				AdditionalDependencies="advapi32.lib shell32.lib"
-				OutputFile="$(OutDir)/HippoShellExt.dll"
-				LinkIncremental="2"
-				ModuleDefinitionFile="HippoShellExt.def"
-				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/HippoShellExt.pdb"
-				SubSystem="2"
-				ImportLibrary="$(OutDir)/HippoShellExt.lib"
-				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -102,10 +80,10 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			InheritedPropertySheets=".\HippoShellExt.vsprops;..\HippoReleaseDll.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
@@ -125,13 +103,6 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;HIPPOSHELLEXT_EXPORTS"
-				RuntimeLibrary="0"
-				UsePrecompiledHeader="2"
-				PrecompiledHeaderThrough="stdafx-hipposhellext.h"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -144,15 +115,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/HippoShellExt.dll"
-				LinkIncremental="1"
-				ModuleDefinitionFile="HippoShellExt.def"
-				GenerateDebugInformation="true"
-				SubSystem="2"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				ImportLibrary="$(OutDir)/HippoShellExt.lib"
-				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -183,6 +145,7 @@
 	<References>
 		<ProjectReference
 			ReferencedProjectIdentifier="{638E7547-B5E8-49AD-A70B-56E333C216FE}"
+			RelativePathToProject=".\HippoUtil\HippoUtil.vcproj"
 		/>
 	</References>
 	<Files>
@@ -246,7 +209,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\stdafx.h"
+				RelativePath=".\stdafx-hipposhellext.h"
 				>
 			</File>
 		</Filter>
