--- a/dumbhippo/trunk/client/windows/dependencies/dependencies.vcproj
+++ b/dumbhippo/trunk/client/windows/dependencies/dependencies.vcproj
@@ -4,6 +4,7 @@
 	Version="8.00"
 	Name="dependencies"
 	ProjectGUID="{923DC368-46A9-4977-B827-75797CC259E3}"
+	RootNamespace="dependencies"
 	Keyword="MakeFileProj"
 	>
 	<Platforms>
@@ -16,44 +17,24 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="Debug"
-			IntermediateDirectory="Debug"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="0"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			InheritedPropertySheets="..\HippoMake.vsprops"
 			>
 			<Tool
 				Name="VCNMakeTool"
-				BuildCommandLine="nmake OUTDIR=..\Debug all"
-				ReBuildCommandLine="nmake OUTDIR=..\Debug clean all"
-				CleanCommandLine="nmake OUTDIR=..\Debug clean"
-				Output=""
-				PreprocessorDefinitions=""
-				IncludeSearchPath=""
-				ForcedIncludes=""
-				AssemblySearchPath=""
-				ForcedUsingAssemblies=""
-				CompileAsManaged=""
 			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="0"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			InheritedPropertySheets="..\HippoMake.vsprops"
 			>
 			<Tool
 				Name="VCNMakeTool"
-				BuildCommandLine=""
-				ReBuildCommandLine=""
-				CleanCommandLine=""
-				Output=""
-				PreprocessorDefinitions=""
-				IncludeSearchPath=""
-				ForcedIncludes=""
-				AssemblySearchPath=""
-				ForcedUsingAssemblies=""
-				CompileAsManaged=""
 			/>
 		</Configuration>
 	</Configurations>
