--- a/dumbhippo/trunk/client/windows/libglib/libglib.vcproj
+++ b/dumbhippo/trunk/client/windows/libglib/libglib.vcproj
@@ -20,7 +20,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="..\HippoDll.vsprops"
+			InheritedPropertySheets=".\libglib.vsprops;..\HippoDebugDll.vsprops"
 			CharacterSet="0"
 			>
 			<Tool
@@ -40,17 +40,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="0"
-				AdditionalIncludeDirectories=".;..\..\common\glib;..\..\common\glib\glib;..\dependencies\gettext\include;..\dependencies\libiconv\include"
-				PreprocessorDefinitions="HAVE_CONFIG_H;WIN32;_DEBUG;_WINDOWS;_USRDLL;LIBGLIB_EXPORTS;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;GLIB_COMPILATION"
-				MinimalRebuild="true"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
-				UsePrecompiledHeader="0"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="4"
-				DisableSpecificWarnings="4018;4244;4267;4311;4312"
+				AdditionalIncludeDirectories=""
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -63,15 +53,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="..\dependencies\libiconv\lib\iconv.lib ..\dependencies\gettext\lib\intl.lib ws2_32.lib"
-				OutputFile="$(OutDir)\libglib-2.0-0.dll"
-				LinkIncremental="2"
-				IgnoreDefaultLibraryNames=""
-				ModuleDefinitionFile="glib.def"
-				GenerateDebugInformation="true"
-				SubSystem="2"
-				OptimizeReferences="0"
-				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -103,7 +84,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="..\HippoDll.vsprops"
+			InheritedPropertySheets=".\libglib.vsprops;..\HippoReleaseDll.vsprops"
 			CharacterSet="0"
 			WholeProgramOptimization="1"
 			>
@@ -124,14 +105,6 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories=".;..\..\common\glib;..\..\common\glib\glib;..\dependencies\gettext\include;..\dependencies\libiconv\include;..\dependencies\dirent\include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;LIBGLIB_EXPORTS"
-				RuntimeLibrary="2"
-				UsePrecompiledHeader="0"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="3"
-				DisableSpecificWarnings="4018;4244;4267;4311;4312"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -144,13 +117,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="..\dependencies\libiconv\lib\iconv.lib ..\dependencies\dirent\lib\dirent.lib ..\dependencies\gettext\lib\intl.lib"
-				LinkIncremental="1"
-				GenerateDebugInformation="true"
-				SubSystem="2"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -599,7 +565,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Creating glibconfig.h"
-						CommandLine="copy $(InputPath) glibconfig.h&#x0D;&#x0A;"
+						CommandLine="copy &quot;$(InputPath)&quot; glibconfig.h&#x0D;&#x0A;"
 						Outputs="glibconfig.h"
 					/>
 				</FileConfiguration>
