--- a/dumbhippo/trunk/client/windows/libgmodule/libgmodule.vcproj
+++ b/dumbhippo/trunk/client/windows/libgmodule/libgmodule.vcproj
@@ -20,8 +20,8 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="..\HippoDll.vsprops"
-			CharacterSet="1"
+			InheritedPropertySheets=".\libgmodule.vsprops;..\HippoDebugDll.vsprops"
+			CharacterSet="0"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -40,16 +40,6 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="0"
-				AdditionalIncludeDirectories=".;..\libglib;..\..\common\glib;..\..\common\glib\glib;..\dependencies\gettext\include;..\dependencies\libiconv\include"
-				PreprocessorDefinitions="HAVE_CONFIG_H;WIN32;_DEBUG;_WINDOWS;_USRDLL;LIBGLIB_EXPORTS;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;GMODULE_COMPILATION"
-				MinimalRebuild="true"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
-				UsePrecompiledHeader="0"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="4"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -62,12 +52,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)\libgmodule-2.0-0.dll"
-				LinkIncremental="2"
-				ModuleDefinitionFile="..\..\common\glib\gmodule\gmodule.def"
-				GenerateDebugInformation="true"
-				SubSystem="2"
-				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -99,8 +83,8 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="..\HippoDll.vsprops"
-			CharacterSet="1"
+			InheritedPropertySheets=".\libgmodule.vsprops;..\HippoReleaseDll.vsprops"
+			CharacterSet="0"
 			WholeProgramOptimization="1"
 			>
 			<Tool
@@ -120,13 +104,6 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories=".;..\libglib;..\..\common\glib;..\..\common\glib\glib;..\dependencies\gettext\include;..\dependencies\libiconv\include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;GMODULE_EXPORTS"
-				RuntimeLibrary="2"
-				UsePrecompiledHeader="0"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -139,12 +116,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				LinkIncremental="1"
-				GenerateDebugInformation="true"
-				SubSystem="2"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -203,7 +174,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Creating gmoduleconf.h"
-						CommandLine="copy &quot;$(InputPath)&quot; gmoduleconf.h"
+						CommandLine="copy &quot;$(InputPath)&quot; gmoduleconf.h&#x0D;&#x0A;"
 						Outputs="gmoduleconf.h"
 					/>
 				</FileConfiguration>
@@ -213,7 +184,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Creating gmoduleconf.h"
-						CommandLine="copy &quot;$(InputPath)&quot; gmoduleconf.h"
+						CommandLine="copy &quot;$(InputPath)&quot; gmoduleconf.h&#x0D;&#x0A;"
 						Outputs="gmoduleconf.h"
 					/>
 				</FileConfiguration>
