--- a/dumbhippo/trunk/client/windows/loudmouth/loudmouth.vcproj
+++ b/dumbhippo/trunk/client/windows/loudmouth/loudmouth.vcproj
@@ -17,15 +17,14 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="../Debug"
-			IntermediateDirectory="Debug"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			InheritedPropertySheets=".\loudmouth.vsprops;..\HippoDebugDll.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="copy ..\..\common\loudmouth\win32-config.h ..\..\common\loudmouth\config.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -41,16 +40,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="0"
-				AdditionalIncludeDirectories=".;../dependencies/gettext/include;../../common/glib;../../common/glib/glib;../libglib;../../common/loudmouth"
-				PreprocessorDefinitions="__WIN32__;LM_COMPILATION;HAVE_CONFIG_H;WIN32;_DEBUG;_WINDOWS;_USRDLL;LOUDMOUTH_EXPORTS"
-				MinimalRebuild="true"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
-				UsePrecompiledHeader="0"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="4"
+				AdditionalIncludeDirectories=""
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -63,17 +53,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions="/VERBOSE:LIB"
-				AdditionalDependencies="intl.lib glib-2.0.lib ws2_32.lib"
-				OutputFile="$(OutDir)/loudmouth-1.dll"
-				LinkIncremental="2"
-				AdditionalLibraryDirectories="../dependencies/gettext/lib;../dependencies/glib/lib"
-				ModuleDefinitionFile="../../common/loudmouth/loudmouth/loudmouth.def"
-				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/loudmouth.pdb"
-				SubSystem="2"
-				ImportLibrary="$(OutDir)/loudmouth.lib"
-				TargetMachine="1"
+				AdditionalLibraryDirectories=""
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -98,16 +78,14 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Creating symbol dump file"
-				CommandLine="..\util\dump_syms $(OutDir)\$(ProjectName).pdb &gt; $(OutDir)\$(ProjectName).sym"
 			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			InheritedPropertySheets=".\loudmouth.vsprops;..\HippoReleaseDll.vsprops"
 			CharacterSet="2"
 			>
 			<Tool
@@ -127,12 +105,6 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;LOUDMOUTH_EXPORTS"
-				RuntimeLibrary="0"
-				UsePrecompiledHeader="2"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -145,15 +117,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/loudmouth.dll"
-				LinkIncremental="1"
-				ModuleDefinitionFile="loudmouth.def"
-				GenerateDebugInformation="true"
-				SubSystem="2"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				ImportLibrary="$(OutDir)/loudmouth.lib"
-				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -178,8 +141,6 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Creating symbol dump file"
-				CommandLine="..\util\dump_syms $(OutDir)\$(ProjectName).pdb &gt; $(OutDir)\$(ProjectName).sym"
 			/>
 		</Configuration>
 	</Configurations>
@@ -296,6 +257,30 @@
 			<File
 				RelativePath="..\..\common\loudmouth\loudmouth\loudmouth.h"
 				>
+			</File>
+			<File
+				RelativePath="..\..\common\loudmouth\win32-config.h"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Creating config.h"
+						CommandLine="copy &quot;$(InputPath)&quot; config.h&#x0D;&#x0A;"
+						Outputs="config.h"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Creating config.h"
+						CommandLine="copy &quot;$(InputPath)&quot; config.h&#x0D;&#x0A;"
+						Outputs="config.h"
+					/>
+				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
